<resources>
    <string name="app_name">overfeed</string>
    <string name="plate">Plate</string>
    <string name="upgrades">Upgrades</string>
    <string name="options">Options</string>
    <string name="statistics">Statistics</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="total_time">Total Time</string>
    <string name="current_play_time">Current play time</string>
    <string name="total_number_of_clicks">Total number of clicks</string>
    <string name="total_amount_of_meals_made">Total amount of meals made</string>
    <string name="back">Back</string>
    <string name="textview">TextView</string>
    <string name="achievements">Achievements</string>
    <string name="achievements_list">Achievements List</string>
    <string name="buttonsave">buttonSave</string>


    <string name="plateUpgradeButton">Plate</string>
    <string name="plateUpgradeDescription">Increases the number of meals made per click!</string>

    <string name="workerUpgradeButton">Worker</string>
    <string name="workerUpgradeDescription">Additional workers to help create meals!</string>

    <string name="foodTruckUpgradeButton">Food Truck</string>
    <string name="foodTruckUpgradeDesc">Food trucks can deliver meals straight to your door!</string>

    <string name="restaurantUpgradeButton">Restaurant</string>
    <string name="restaurantUpgradeDesc">Restaurants produce massive amounts of food per second!</string>

    <string name="lambSauceUpgradeButton">Lamb Sauce</string>
    <string name="lambSauceUpgradeDesc">Eviscerate all competition with one drop of this sacred ingredient!</string>
    <string name="save">Save</string>

    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="clickableplate">clickablePlate</string>
    <string name="plateCaps">PLATE</string>
    <string name="workerCaps">WORKER</string>
    <string name="food_truckCAPS">FOOD TRUCK</string>
    <string name="restaurantCAPS">RESTAURANT</string>
    <string name="lamb_sauceCAPS">LAMB SAUCE</string>
    <string name="tablebgimage">TableBGImage</string>
    <string name="tableimage">tableImage</string>


</resources>